--- a/template/2019-04-27-why.html
+++ b/template/2019-04-27-why.html
@@ -119,7 +119,31 @@
                     
 
                     
+                        
+                        <li class="chapter" data-level="1.1" data-path="/jekyll/2023-12-24-books.html">
+                        
+                            <a href="/jekyll/2023-12-24-books.html" onclick="pageScrollToTop(this)">
+                                Book Journal
+                            </a>
+                            
+                                
+                            
+                        </li>
+                    
+                        
+                        <li class="chapter" data-level="1.1" data-path="/jekyll/2023-12-24-notes.html">
+                        
+                            <a href="/jekyll/2023-12-24-notes.html" onclick="pageScrollToTop(this)">
+                                Notes
+                            </a>
+                            
+                                
+                            
+                        </li>
+                    
 
+                    
+                        <li class="divider"></li>
                     
                 
             
@@ -328,7 +352,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2023-12-24 14:13:28 -0500"
+        "time": "2023-12-24 14:17:55 -0500"
     },
     "basePath": "",
     "book": {
