--- a/template/2023-10-14-math-latex.html
+++ b/template/2023-10-14-math-latex.html
@@ -141,6 +141,17 @@
                             
                         </li>
                     
+                        
+                        <li class="chapter" data-level="1.1" data-path="/jekyll/2023-12-31-personal.html">
+                        
+                            <a href="/jekyll/2023-12-31-personal.html" onclick="pageScrollToTop(this)">
+                                Personal Notes
+                            </a>
+                            
+                                
+                            
+                        </li>
+                    
 
                     
                         <li class="divider"></li>
@@ -410,7 +421,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2023-12-29 08:38:15 -0500"
+        "time": "2023-12-31 16:32:36 -0500"
     },
     "basePath": "",
     "book": {
