--- a/template/2019-04-28-howto.html
+++ b/template/2019-04-28-howto.html
@@ -108,6 +108,17 @@
                             
                         </li>
                     
+                        
+                        <li class="chapter" data-level="1.1" data-path="/pages/teachings/">
+                        
+                            <a href="/pages/teachings/" onclick="pageScrollToTop(this)">
+                                Teachings
+                            </a>
+                            
+                                
+                            
+                        </li>
+                    
 
                     
                         <li class="divider"></li>
@@ -378,7 +389,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2024-01-11 06:30:57 -0500"
+        "time": "2024-01-11 06:36:52 -0500"
     },
     "basePath": "",
     "book": {
