--- a/template/2022-05-24-page_cover.html
+++ b/template/2022-05-24-page_cover.html
@@ -153,10 +153,10 @@
                         </li>
                     
                         
-                        <li class="chapter" data-level="1.1" data-path="/jekyll/2023-12-31-personal.html">
+                        <li class="chapter" data-level="1.1" data-path="/jekyll/2023-12-31-_.html">
                         
-                            <a href="/jekyll/2023-12-31-personal.html" onclick="pageScrollToTop(this)">
-                                Personal Notes
+                            <a href="/jekyll/2023-12-31-_.html" onclick="pageScrollToTop(this)">
+                                _
                             </a>
                             
                                 
@@ -382,7 +382,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2024-01-11 06:36:52 -0500"
+        "time": "2024-01-12 06:20:17 -0500"
     },
     "basePath": "",
     "book": {
