--- a/template/2022-06-26-wide_tables.html
+++ b/template/2022-06-26-wide_tables.html
@@ -112,7 +112,7 @@
                         <li class="chapter" data-level="1.1" data-path="/pages/teachings/">
                         
                             <a href="/pages/teachings/" onclick="pageScrollToTop(this)">
-                                Teachings
+                                Teaching
                             </a>
                             
                                 
@@ -440,7 +440,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2024-01-12 06:20:17 -0500"
+        "time": "2024-01-12 06:21:03 -0500"
     },
     "basePath": "",
     "book": {
