--- a/template/2019-04-29-license.html
+++ b/template/2019-04-29-license.html
@@ -109,9 +109,9 @@
                         </li>
                     
                         
-                        <li class="chapter" data-level="1.1" data-path="/pages/teachings/">
+                        <li class="chapter" data-level="1.1" data-path="/pages/teaching/">
                         
-                            <a href="/pages/teachings/" onclick="pageScrollToTop(this)">
+                            <a href="/pages/teaching/" onclick="pageScrollToTop(this)">
                                 Teaching
                             </a>
                             
@@ -367,7 +367,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2024-01-12 06:21:03 -0500"
+        "time": "2024-01-13 09:07:58 -0500"
     },
     "basePath": "",
     "book": {
