--- a/template/2022-05-24-page_cover.html
+++ b/template/2022-05-24-page_cover.html
@@ -163,6 +163,17 @@
                             
                         </li>
                     
+                        
+                        <li class="chapter" data-level="1.1" data-path="/jekyll/2023-12-31-_.html">
+                        
+                            <a href="/jekyll/2023-12-31-_.html" onclick="pageScrollToTop(this)">
+                                _
+                            </a>
+                            
+                                
+                            
+                        </li>
+                    
 
                     
                         <li class="divider"></li>
@@ -382,7 +393,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2024-02-05 07:30:47 -0500"
+        "time": "2024-02-06 06:55:06 -0500"
     },
     "basePath": "",
     "book": {
