--- a/template/2021-08-10-toc.html
+++ b/template/2021-08-10-toc.html
@@ -101,7 +101,7 @@
                         <li class="chapter" data-level="1.1" data-path="/pages/publications/">
                         
                             <a href="/pages/publications/" onclick="pageScrollToTop(this)">
-                                Publications
+                                Publications and Working Papers
                             </a>
                             
                                 
@@ -545,7 +545,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2025-06-05 11:08:28 -0400"
+        "time": "2025-06-05 11:14:06 -0400"
     },
     "basePath": "",
     "book": {
