--- a/template/2022-06-30-tips_warnings_dangers.html
+++ b/template/2022-06-30-tips_warnings_dangers.html
@@ -420,7 +420,7 @@ window.MathJax = {
     },
     "gitbook": {
         "version": "3.2.3",
-        "time": "2025-06-05 11:14:06 -0400"
+        "time": "2025-06-30 16:09:09 +0800"
     },
     "basePath": "",
     "book": {
